--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -4,4 +4,12 @@
 
 <web-app>
   <display-name>Archetype Created Web Application</display-name>
-</web-app>
+  <servlet>
+  <servlet-name> Dispatcher </servlet-name>
+  <servlet-class> org.springframework.web.servlet.DispatcherServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+  <servlet-name>Dispatcher </servlet-name>
+  <url-pattern>/</url-pattern>
+  </servlet-mapping>
+   </web-app>
